<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/slikaJela"
        android:layout_width="match_parent"
        android:layout_height="263dp"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/splash" />

    <TextView
        android:id="@+id/txtNazivJelo_detalji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/naziv_jela"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtCena_detalji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="5dp"
        android:text="0,00 din"
        android:textAlignment="center"
        android:textSize="24sp" />


    <TextView
            android:id="@+id/txtOpis_detalji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:hint="Opis"
            android:padding="7dp"
            android:text="@string/opis_jela"
            android:textSize="18sp"
            android:textStyle="normal|bold|italic"/>
        <TextView
            android:id="@+id/txtKategorija_detalji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:hint="Opis"
            android:padding="7dp"
            android:text="@string/kategorija"
            android:textSize="14sp"
            android:textStyle="italic"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spKategorije_detalji"
            android:layout_margin="7dp"
            android:padding="6dp" />


    <ListView
                android:id="@+id/lsvSastojci_detalji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btnPoruci_detalji"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Poruci jelo"

        />



     </LinearLayout>
