<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/slikaJela"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/title_bar" />

        <TextView
            android:id="@+id/txtNazivJelo_detalji"
            style="@style/mojaTema.naziv_jela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/slikaJela"
            android:layout_alignStart="@+id/slikaJela"
            android:layout_alignTop="@+id/slikaJela"
            android:layout_marginEnd="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/naziv_jela" />

        <TextView
            android:id="@+id/txtKategJela_detalji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategorija"
            android:layout_below="@+id/txtNazivJelo_detalji"
            android:layout_alignStart="@+id/txtNazivJelo_detalji"
            style="@style/mojaTema.kategorija_jela"/>

        <TextView
            android:id="@+id/txtCena_detalji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="0,00 din"
            android:textAlignment="center"
            android:layout_alignBottom="@+id/slikaJela"
            android:layout_alignLeft="@+id/txtOpis_detalji"
            android:layout_alignStart="@+id/txtOpis_detalji"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="21dp"
            android:layout_marginBottom="30dp"
            style="@style/mojaTema.cena"/>

        <TextView
            android:id="@+id/txtOpis_detalji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Opis"
            android:padding="7dp"
            android:text="@string/opis_jela"
            android:textSize="18sp"
            android:textStyle="normal|bold|italic"
            android:layout_below="@+id/txtKategJela_detalji"
            android:layout_alignLeft="@+id/txtKategJela_detalji"
            android:layout_alignStart="@+id/txtKategJela_detalji"
            style="@style/mojaTema.opis_jela"/>

    </RelativeLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabDodaja_detalji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="15dp"
        android:clickable="true"
        android:padding="5dp"
        android:src="@mipmap/ic_korpa"
        app:backgroundTint="@color/cena_boja" />

</android.support.design.widget.CoordinatorLayout>