<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <RatingBar
            android:id="@+id/rabaRejting_detalji"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:isIndicator="false"
            android:max="5"
            android:padding="2dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
                    android:id="@+id/slikaJela"
            android:layout_margin="4dp"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/splash"
                    tools:ignore="ContentDescription"
            android:layout_width="161dp"
            android:layout_height="159dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.84">

            <TextView
                            android:id="@+id/txtNazivJelo_detalji"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:padding="5dp"
                            android:text="@string/naziv_jela"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            tools:ignore="HardcodedText,NestedWeights"
                android:layout_weight="1" />

            <TextView
                            android:id="@+id/txtOpisJelo_detalji"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:textColor="@android:color/black"
                            android:padding="5dp"
                            android:text="@string/kategorija"
                            android:textSize="14sp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtCena_detalji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="0,00 din"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:ignore="HardcodedText"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnPoruci_detalji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Poruci jelo"

                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>


    <TextView
                android:id="@+id/txtOpis_detalji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:hint="Opis"
                android:padding="7dp"
                android:text="@string/opis_jela"
                android:textSize="18sp"
                android:textStyle="normal|bold|italic"
                tools:ignore="HardcodedText" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spKategorije_detalji"
                android:layout_margin="7dp"
                android:padding="6dp" />

            <ListView android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/lsvsastojci_detalji"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

</LinearLayout>
